--- a/Python/Numpy/praticando.ipynb
+++ b/Python/Numpy/praticando.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +203,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arry = np.arange(0,16)\n",
+    "arry2d = arry.reshape((4,4))\n",
+    "print(arry2d)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 4)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arry2d.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arryUni = arry2d.flatten()\n",
+    "print(arryUni)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5  6  7]\n",
+      " [ 8  9 10 11 12 13 14 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "NovoArry = arry2d.reshape((2,8))\n",
+    "print(NovoArry)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -236,6 +316,25 @@
     "### Crie dois arrays 2D: array3 com a forma (2, 2) e array4 com a forma (2, 1).\n",
     "\n",
     "### Concatenar array3 e array4 ao longo do eixo 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Operações Matemáticas\n",
+    "\n",
+    "### Crie um array de números de 1 a 5.\n",
+    "\n",
+    "### Adicione 10 a cada elemento do array.\n",
+    "\n",
+    "### Multiplique cada elemento do array por 2.\n",
+    "\n",
+    "### Crie dois arrays 1D: array1 e array2 de mesma forma e com valores à sua escolha.\n",
+    "\n",
+    "### Some array1 e array2 elemento por elemento.\n",
+    "\n",
+    "### Multiplique array1 e array2 elemento por elemento.\n"
    ]
   }
  ],
