--- a/Python/Numpy/praticando.ipynb
+++ b/Python/Numpy/praticando.ipynb
@@ -303,6 +303,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arryIn = np.arange(10, 51)\n",
+    "arryIn[5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([13, 14, 15, 16])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arryIn[3:7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array2DD = np.arange(1, 17)\n",
+    "arry2DD = array2DD.reshape(4,4)\n",
+    "print(arry2DD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7, 8])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arry2DD[1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  7, 11, 15])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arry2DD[:,2]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,6 +419,39 @@
     "### Crie dois arrays 2D: array3 com a forma (2, 2) e array4 com a forma (2, 1).\n",
     "\n",
     "### Concatenar array3 e array4 ao longo do eixo 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1 = np.array([[1, 2], [3, 4]])\n",
+    "print(array1)\n",
+    "\n",
+    "array2 = np.array([[5, 6], [7, 8]])\n",
+    "print(array2)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -335,6 +471,118 @@
     "### Some array1 e array2 elemento por elemento.\n",
     "\n",
     "### Multiplique array1 e array2 elemento por elemento.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.arange(1,6)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 12 13 14 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_10 = array + 10\n",
+    "print(array_10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_multi = array * 2\n",
+    "print(array_multi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "[5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array1 = np.array([1, 2, 3, 4, 5])\n",
+    "print(array1)\n",
+    "\n",
+    "array2 = np.array([5, 6, 7, 8, 9])\n",
+    "print(array2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  8 10 12 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_soma = array1 + array2\n",
+    "print(array_soma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 12 21 32 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_produto = array1 * array2\n",
+    "print(array_produto)"
    ]
   }
  ],
