Computation on NumPy Arrays: Universal Functions

--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -1378,6 +1378,392 @@
     "print(left)\n",
     "print(right)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funções trigonométricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = np.linspace(0, np.pi, 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta      =  [0.         1.57079633 3.14159265]\n",
+      "sin(theta) =  [0.0000000e+00 1.0000000e+00 1.2246468e-16]\n",
+      "cos(theta) =  [ 1.000000e+00  6.123234e-17 -1.000000e+00]\n",
+      "tan(theta) =  [ 0.00000000e+00  1.63312394e+16 -1.22464680e-16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"theta      = \", theta)\n",
+    "print(\"sin(theta) = \", np.sin(theta))\n",
+    "print(\"cos(theta) = \", np.cos(theta))\n",
+    "print(\"tan(theta) = \", np.tan(theta))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x         =  [-1, 0, 1]\n",
+      "arcsin(x) =  [-1.57079633  0.          1.57079633]\n",
+      "arccos(x) =  [3.14159265 1.57079633 0.        ]\n",
+      "arctan(x) =  [-0.78539816  0.          0.78539816]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [-1, 0, 1]\n",
+    "print(\"x         = \", x)\n",
+    "print(\"arcsin(x) = \", np.arcsin(x))\n",
+    "print(\"arccos(x) = \", np.arccos(x))\n",
+    "print(\"arctan(x) = \", np.arctan(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expoentes e logaritmos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x     = [1, 2, 3]\n",
+      "e^x   = [ 2.71828183  7.3890561  20.08553692]\n",
+      "2^x   = [2. 4. 8.]\n",
+      "3^x   = [ 3  9 27]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "print(\"x     =\", x)\n",
+    "print(\"e^x   =\", np.exp(x))\n",
+    "print(\"2^x   =\", np.exp2(x))\n",
+    "print(\"3^x   =\", np.power(3, x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x        = [1, 2, 4, 10]\n",
+      "ln(x)    = [0.         0.69314718 1.38629436 2.30258509]\n",
+      "log2(x)  = [0.         1.         2.         3.32192809]\n",
+      "log10(x) = [0.         0.30103    0.60205999 1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 4, 10]\n",
+    "print(\"x        =\", x)\n",
+    "print(\"ln(x)    =\", np.log(x))\n",
+    "print(\"log2(x)  =\", np.log2(x))\n",
+    "print(\"log10(x) =\", np.log10(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exp(x) - 1 = [0.         0.0010005  0.01005017 0.10517092]\n",
+      "log(1 + x) = [0.         0.0009995  0.00995033 0.09531018]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [0, 0.001, 0.01, 0.1]\n",
+    "print(\"exp(x) - 1 =\", np.expm1(x))\n",
+    "print(\"log(1 + x) =\", np.log1p(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summing the Values in an Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52.12818058833704"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = np.random.random(100)\n",
+    "sum(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52.12818058833702"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(L)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 4.01 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "164 ms ± 111 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.04 ms ± 571 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "big_array = np.random.rand(1000000)\n",
+    "%timeit sum(big_array)\n",
+    "%timeit np.sum(big_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimum and Maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.4057692298008462e-06, 0.9999994392723005)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(big_array), max(big_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.4057692298008462e-06, 0.9999994392723005)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(big_array), np.max(big_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116 ms ± 36.6 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "1.07 ms ± 101 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit min(big_array)\n",
+    "%timeit np.min(big_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4057692298008462e-06 0.9999994392723005 500202.5348847683\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(big_array.min(), big_array.max(), big_array.sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi dimensional aggregates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.50063048 0.07383653 0.49018646 0.72521956]\n",
+      " [0.84926562 0.10226215 0.99559424 0.59250301]\n",
+      " [0.53509    0.88518089 0.25518136 0.13130483]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = np.random.random((3, 4))\n",
+    "print(M)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.1362551272647154"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.50063048, 0.07383653, 0.25518136, 0.13130483])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.min(axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.72521956, 0.99559424, 0.88518089])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.max(axis=1)\n"
+   ]
   }
  ],
  "metadata": {
