--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -1970,11 +1970,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regras de transmissão em NumPy:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regra 1: Preenchimento com unidades"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se as duas matrizes tiverem um número diferente de dimensões, a matriz com menos dimensões será preenchida com unidades no lado esquerdo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 4 6]\n",
+      " [5 7 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Matriz A com 2 dimensões\n",
+    "A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "\n",
+    "# Matriz B com 1 dimensão\n",
+    "B = np.array([1, 2, 3])\n",
+    "\n",
+    "# A forma de B será preenchida com unidades no lado esquerdo para igualar a de A\n",
+    "# A: (2, 3)\n",
+    "# B: (1, 3) -> (1, 3)\n",
+    "\n",
+    "# Resultado da transmissão\n",
+    "C = A + B\n",
+    "print(C)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regra 2: Esticamento de unidades\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se as formas das duas matrizes não corresponderem em nenhuma dimensão, a matriz com forma igual a 1 naquela dimensão será esticada para corresponder ao outro formato."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Matriz A com forma (2, 3)\n",
+    "A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "\n",
+    "# Matriz B com forma (2, 1)\n",
+    "B = np.array([\n",
+    "    [10],\n",
+    "    [20]\n",
+    "])\n",
+    "\n",
+    "# A forma de B será esticada para corresponder a A\n",
+    "# A: (2, 3)\n",
+    "# B: (2, 1) -> (2, 3)\n",
+    "\n",
+    "# Resultado da transmissão\n",
+    "C = A + B\n",
+    "print(C)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regra 3: Erro em tamanhos incompatíveis\n",
+    "\n",
+    "Se em qualquer dimensão os tamanhos forem diferentes e nenhum for igual a 1, um erro será gerado.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "operands could not be broadcast together with shapes (2,3) (2,2) \n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Matriz A com forma (2, 3)\n",
+    "A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "])\n",
+    "\n",
+    "# Matriz B com forma (2, 2)\n",
+    "B = np.array([\n",
+    "    [10, 20],\n",
+    "    [30, 40]\n",
+    "])\n",
+    "\n",
+    "# As formas não são compatíveis para transmissão\n",
+    "# A: (2, 3)\n",
+    "# B: (2, 2)\n",
+    "\n",
+    "# Isso resultará em um erro\n",
+    "try:\n",
+    "    C = A + B\n",
+    "except ValueError as e:\n",
+    "    print(e)\n"
+   ]
   }
  ],
  "metadata": {
