--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2115,6 +2115,54 @@
     "except ValueError as e:\n",
     "    print(e)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Np.Newaxis\n",
+    "\n",
+    "é um objeto em NumPy que permite adicionar uma nova dimensão a um array, expandindo sua forma. Isso é especialmente útil em operações de transmissão (broadcasting), onde pode ser necessário ajustar as dimensões de um array para que ele seja compatível com outro array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vetor original (linha):\n",
+      "[1 2 3]\n",
+      "Forma: (3,)\n",
+      "\n",
+      "Vetor transformado (coluna):\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "Forma: (3, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Vetor linha\n",
+    "a = np.array([1, 2, 3])\n",
+    "\n",
+    "# Usando np.newaxis para transformar em vetor coluna\n",
+    "a_coluna = a[:, np.newaxis]\n",
+    "\n",
+    "print(\"Vetor original (linha):\")\n",
+    "print(a)\n",
+    "print(\"Forma:\", a.shape)\n",
+    "\n",
+    "print(\"\\nVetor transformado (coluna):\")\n",
+    "print(a_coluna)\n",
+    "print(\"Forma:\", a_coluna.shape)\n"
+   ]
   }
  ],
  "metadata": {
