--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2163,6 +2163,16 @@
     "print(a_coluna)\n",
     "print(\"Forma:\", a_coluna.shape)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparações, Máscaras e Lógica Booleana\n",
+    "AND e OR executa uma única avaliação Booleana em um objeto inteiro, enquanto & e |executa múltiplas avaliações Booleanas no conteúdo (os bits ou bytes individuais) de um objeto. Para matrizes Booleanas NumPy, a última é quase sempre a operação desejada.\n",
+    "\n",
+    "![Operadores equivalentes](https://github.com/naticost/DataAnalytics/blob/main/Python/img/Operador%20equivalente.png)"
+   ]
   }
  ],
  "metadata": {
