Comparações, Máscaras e Lógica Booleana

--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2171,7 +2171,9 @@
     "### Comparações, Máscaras e Lógica Booleana\n",
     "AND e OR executa uma única avaliação Booleana em um objeto inteiro, enquanto & e |executa múltiplas avaliações Booleanas no conteúdo (os bits ou bytes individuais) de um objeto. Para matrizes Booleanas NumPy, a última é quase sempre a operação desejada.\n",
     "\n",
-    "![Operadores equivalentes](https://github.com/naticost/DataAnalytics/blob/main/Python/img/Operador%20equivalente.png)"
+    "![Operadores equivalentes](https://raw.githubusercontent.com/naticost/DataAnalytics/main/Python/img/Operador_equivalente.png)\n",
+    "\n",
+    "![Operadores equivalentes](https://raw.githubusercontent.com/naticost/DataAnalytics/main/Python/img/ufuncs_equi.png)"
    ]
   }
  ],
