Exploring Fancy Indexing

--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2175,6 +2175,48 @@
     "\n",
     "![Operadores equivalentes](https://raw.githubusercontent.com/naticost/DataAnalytics/main/Python/img/ufuncs_equi.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explorando a indexação sofisticada \n",
+    "\n",
+    " significa passar um array de índices para acessar múltiplos elementos do array de uma vez. Por exemplo, considere o seguinte array:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51 92 14 71 60 20 82 86 74 74]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[71, 86, 14]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "rand = np.random.RandomState(42)\n",
+    "\n",
+    "x = rand.randint(100, size=10)\n",
+    "print(x)\n",
+    "\n",
+    "[x[3], x[7], x[2]]\n"
+   ]
   }
  ],
  "metadata": {
