Classificação rápida em NumPy: np.sorte ---  np.argsor

--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2203,7 @@
        "[71, 86, 14]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,6 +2216,136 @@
     "print(x)\n",
     "\n",
     "[x[3], x[7], x[2]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind = [3, 7, 4]\n",
+    "# podemos passar uma única lista ou array de índices para obter o mesmo resultado\n",
+    "x[ind]\n",
+    "#Ao usar indexação sofisticada, o formato do resultado reflete o formato das matrizes de índice em vez do formato da matriz que está sendo indexada\n",
+    "ind = np.array([[3, 7],\n",
+    "                [4, 5]])\n",
+    "x[ind]\n",
+    "\n",
+    "X = np.arange(12).reshape((3, 4))\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificação rápida em NumPy: np.sorte ---  np.argsor\n",
+    "\n",
+    "A função np.sort retorna uma cópia do array fornecido com os elementos ordenados. Esta função pode ordenar arrays em uma ou várias dimensões."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Criando um array unidimensional\n",
+    "arr = np.array([3, 1, 2, 5, 4])\n",
+    "\n",
+    "# Ordenando o array\n",
+    "sorted_arr = np.sort(arr)\n",
+    "\n",
+    "print(\"Array original:\", arr)\n",
+    "print(\"Array ordenado:\", sorted_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para arrays multidimensionais, você pode especificar o eixo (axis) ao longo do qual deseja ordenar os elementos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando um array bidimensional\n",
+    "arr_2d = np.array([[3, 1, 2], [5, 4, 6]])\n",
+    "\n",
+    "# Ordenando o array ao longo do eixo 0 (linhas)\n",
+    "sorted_arr_2d = np.sort(arr_2d, axis=0)\n",
+    "\n",
+    "print(\"Array bidimensional original:\\n\", arr_2d)\n",
+    "print(\"Array bidimensional ordenado ao longo do eixo 0:\\n\", sorted_arr_2d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A função np.argsort retorna os índices que ordenariam um array. Em vez de retornar o array ordenado, ele retorna um array de índices que podem ser usados para obter o array ordenado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Criando um array unidimensional\n",
+    "arr = np.array([3, 1, 2, 5, 4])\n",
+    "\n",
+    "# Obtendo os índices que ordenariam o array\n",
+    "indices = np.argsort(arr)\n",
+    "\n",
+    "print(\"Array original:\", arr)\n",
+    "print(\"Índices para ordenação:\", indices)\n",
+    "\n",
+    "# Usando os índices para obter o array ordenado\n",
+    "sorted_arr = arr[indices]\n",
+    "print(\"Array ordenado usando np.argsort:\", sorted_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando um array bidimensional\n",
+    "arr_2d = np.array([[3, 1, 2], [5, 4, 6]])\n",
+    "\n",
+    "# Obtendo os índices que ordenariam o array ao longo do eixo 0 (linhas)\n",
+    "indices_2d = np.argsort(arr_2d, axis=0)\n",
+    "\n",
+    "print(\"Array bidimensional original:\\n\", arr_2d)\n",
+    "print(\"Índices para ordenação ao longo do eixo 0:\\n\", indices_2d)\n",
+    "\n",
+    "# Usando os índices para obter o array ordenado ao longo do eixo 0\n",
+    "sorted_arr_2d = np.take_along_axis(arr_2d, indices_2d, axis=0)\n",
+    "print(\"Array bidimensional ordenado usando np.argsort ao longo do eixo 0:\\n\", sorted_arr_2d)\n"
    ]
   }
  ],
