estudando classificações Parciais: Particionamento

--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2260,9 +2260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [3 1 2 5 4]\n",
+      "Array ordenado: [1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -2285,9 +2294,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array bidimensional original:\n",
+      " [[3 1 2]\n",
+      " [5 4 6]]\n",
+      "Array bidimensional ordenado ao longo do eixo 0:\n",
+      " [[3 1 2]\n",
+      " [5 4 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Criando um array bidimensional\n",
     "arr_2d = np.array([[3, 1, 2], [5, 4, 6]])\n",
@@ -2308,9 +2330,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [3 1 2 5 4]\n",
+      "Índices para ordenação: [1 2 0 4 3]\n",
+      "Array ordenado usando np.argsort: [1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -2330,9 +2362,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array bidimensional original:\n",
+      " [[3 1 2]\n",
+      " [5 4 6]]\n",
+      "Índices para ordenação ao longo do eixo 0:\n",
+      " [[0 0 0]\n",
+      " [1 1 1]]\n",
+      "Array bidimensional ordenado usando np.argsort ao longo do eixo 0:\n",
+      " [[3 1 2]\n",
+      " [5 4 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Criando um array bidimensional\n",
     "arr_2d = np.array([[3, 1, 2], [5, 4, 6]])\n",
@@ -2346,6 +2394,168 @@
     "# Usando os índices para obter o array ordenado ao longo do eixo 0\n",
     "sorted_arr_2d = np.take_along_axis(arr_2d, indices_2d, axis=0)\n",
     "print(\"Array bidimensional ordenado usando np.argsort ao longo do eixo 0:\\n\", sorted_arr_2d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 3 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([2, 1, 4, 3, 5])\n",
+    "i = np.argsort(x)\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O primeiro elemento desse resultado fornece o índice do menor elemento, o segundo valor fornece o índice do segundo menor, e assim por diante. Esses índices podem então ser usados ​​(por meio de indexação sofisticada) para construir o array ordenado, se desejado:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[i]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificando ao longo de linhas ou colunas\n",
+    "\n",
+    "Um recurso útil dos algoritmos de classificação do NumPy é a capacidade de classificar ao longo de linhas ou colunas específicas de uma matriz multidimensional usando o axisargumento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 3 7 4 6 9]\n",
+      " [2 6 7 4 3 7]\n",
+      " [7 2 5 4 1 7]\n",
+      " [5 1 4 0 9 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand = np.random.RandomState(42)\n",
+    "X = rand.randint(0, 10, (4, 6))\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 4, 0, 1, 5],\n",
+       "       [5, 2, 5, 4, 3, 7],\n",
+       "       [6, 3, 7, 4, 6, 7],\n",
+       "       [7, 6, 7, 4, 9, 9]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# classificar cada coluna de X \n",
+    "np.sort(X, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 4, 6, 6, 7, 9],\n",
+       "       [2, 3, 4, 6, 7, 7],\n",
+       "       [1, 2, 4, 5, 7, 7],\n",
+       "       [0, 1, 4, 5, 5, 9]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# classificar cada linha de X \n",
+    "np.sort(X, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classificações Parciais: Particionamento\n",
+    "\n",
+    "Às vezes, não estamos interessados em classificar o array inteiro, mas apenas em encontrar os k menores valores no array. Para isso, o NumPy fornece a função np.partition. A np.partition recebe um array e um número K; o resultado é um novo array onde os menores K valores estão à esquerda da partição, e os valores restantes à direita."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [7 2 5 3 9 1 8]\n",
+      "Array particionado com os 3 menores valores à esquerda: [1 2 3 5 7 9 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Criando um array\n",
+    "arr = np.array([7, 2, 5, 3, 9, 1, 8])\n",
+    "\n",
+    "# Particionando o array para encontrar os 3 menores valores\n",
+    "k = 3\n",
+    "partitioned_arr = np.partition(arr, k)\n",
+    "\n",
+    "print(\"Array original:\", arr)\n",
+    "print(f\"Array particionado com os {k} menores valores à esquerda:\", partitioned_arr)\n"
    ]
   }
  ],
