--- a/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
+++ b/Python/Numpy/(Cap2)Introduction_to_NumPy.ipynb
@@ -2557,6 +2557,27 @@
     "print(\"Array original:\", arr)\n",
     "print(f\"Array particionado com os {k} menores valores à esquerda:\", partitioned_arr)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### À Parte: Notação Big-O\n",
+    "\n",
+    "A notação Big-O é uma forma de descrever como o tempo de execução de um algoritmo aumenta à medida que o tamanho da entrada cresce. Ela é fundamental na ciência da computação para entender a eficiência dos algoritmos.\n",
+    "\n",
+    "Basicamente, a notação Big-O nos diz quão rápido o tempo de execução de um algoritmo cresce com o aumento dos dados de entrada. Por exemplo, se um algoritmo leva 1 segundo para processar 1.000 elementos e é classificado como \\( O(N) \\), esperamos que ele leve cerca de 5 segundos para processar 5.000 elementos. Por outro lado, se um algoritmo leva 1 segundo para 1.000 elementos e é classificado como \\( O(N^2) \\), ele levará cerca de 25 segundos para processar 5.000 elementos.\n",
+    "\n",
+    "Para entender melhor:\n",
+    "\n",
+    "- \\( O(N) \\): O tempo de execução cresce linearmente com o tamanho da entrada. Se a entrada dobra, o tempo de execução também dobra.\n",
+    "- \\( O(N^2) \\): O tempo de execução cresce quadraticamente. Se a entrada dobra, o tempo de execução aumenta quatro vezes.\n",
+    "\n",
+    "Quando falamos de \\( N \\), geralmente estamos nos referindo ao tamanho do conjunto de dados (número de pontos, dimensões, etc.). Para conjuntos de dados muito grandes, a diferença entre algoritmos \\( O(N) \\) e \\( O(N^2) \\) pode ser enorme!\n",
+    "\n",
+    "Importante lembrar que a notação Big-O não nos dá o tempo exato de execução, apenas uma ideia de como o tempo cresce com o tamanho da entrada. Às vezes, um algoritmo \\( O(N^2) \\) pode ser mais rápido para pequenos conjuntos de dados, mesmo que um algoritmo \\( O(N) \\) tenha uma melhor escalabilidade no geral.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
